example/user-guides/getting-started/grafana/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  #type: NodePort
  ports:
    - port: 3000
      protocol: TCP
  selector:
    component: grafana
