example/user-guides/getting-started/grafana/grafana-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  rules:
    - host: grafana.talcoding.com
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 3000
